@@ -16,17 +16,18 @@
 #addnewblogbtn
 {
     float: left;
-    margin-top: 13px;
+    margin-top: 15px;
+}
+#addmessage
+{
+    font-size: 0.8em;
+    color: red;
+    line-height: 40px;
 }
 
-#bloglst
+#bloglistarea
 {
-    height: 400px;
-    margin-left: 250px;
-    margin-right: 50px;
     text-align: left;
-    white-space: nowrap;
-    overflow-x: hidden;
 }
 div.blog
 {
@@ -40,6 +41,11 @@ div.blogtop
     -webkit-border-top-left-radius: 5px;
     -moz-border-radius-topright: 5px;
     -webkit-border-top-right-radius: 5px;
+}
+div.blogtop button
+{
+    float: right;
+    margin-top: -28px;
 }
 div.blogtit
 {
@@ -57,8 +63,16 @@ div.blogurl span
     padding: 2px 5px 2px 2px;
     background-color: #144a4c;
 }
+button.blogeditbtn
+{
+}
+button.blogdeletebtn
+{
+    display: none;
+}
 div.blogbot
 {
+    display: none;
     padding: 10px 15px 10px 15px;
     /*background-color: #e1f0f4;*/
     background-color: #c4e2ea;
@@ -67,4 +81,9 @@ div.blogbot
 input.intxt-full
 {
     width: 400px;
+}
+
+#blogitemblank
+{
+    display: none;
 }
