@@ -1,20 +1,20 @@
-var mytpl = null;
+var my_template = null;
 
 function toggle_blog_add()
 {
-    if(mytpl.new_blog_form.toggle().css('display')=='block')
+    if(my_template.new_blog_form.toggle().css('display')=='block')
     {
-        mytpl.new_blog_url.val('');
-        mytpl.new_blog_url.focus();
+        my_template.new_blog_url.val('');
+        my_template.new_blog_url.focus();
     }
 
-    mytpl.blog_type_failed.hide();
+    my_template.blog_type_failed.hide();
 }
 
 function add_message(m)
 {
-    mytpl.new_blog_message.text(m);
-    mytpl.new_blog_message.show();
+    my_template.new_blog_message.text(m);
+    my_template.new_blog_message.show();
 }
 
 function blog_populate(b)
@@ -28,24 +28,21 @@ function blog_populate(b)
         keywords : b.find('keywords').text()
     };
 
-    var _item = mytpl.blog_item_blank.clone();
+    var _item = my_template.blog_item_blank.clone();
+    _item.find('div.blog').attr('blog', _blog.blog);
 
-    _item.find('div.blogitem').attr('blog', _blog.blog);
-    _item.find('div.blogitemeditform').attr('blog', _blog.blog);
+    my_template.blog_list_area.prepend(_item.html());
 
-    mytpl.blog_list_area.prepend(_item.html());
-
-    mytpl.blog_list_ref[_blog.blog] = 
+    my_template.blog_list_ref[_blog.blog] = 
     {
-        item : mytpl.blog_list_area.find("div.blogitem[blog='" + _blog.blog + "']"),
-        form : mytpl.blog_list_area.find("div.blogitemeditform[blog='" + _blog.blog + "']")
+        item : my_template.blog_list_area.find("div.blog[blog='" + _blog.blog + "']"),
     };
 
-    mytpl.blog_list_ref[_blog.blog].item.find('span.blogitemname').text(_blog.name);
-    mytpl.blog_list_ref[_blog.blog].item.find('span.blogitemurl').text(_blog.url);
-    mytpl.blog_list_ref[_blog.blog].form.find("input[name='name']").val(_blog.name);
-    mytpl.blog_list_ref[_blog.blog].form.find("input[name='username']").val(_blog.username);
-    mytpl.blog_list_ref[_blog.blog].form.find("input[name='keywords']").val(_blog.keywords);
+    my_template.blog_list_ref[_blog.blog].item.find('div.blogtit').text(_blog.name);
+    my_template.blog_list_ref[_blog.blog].item.find('div.blogurl > span').text(_blog.url);
+    my_template.blog_list_ref[_blog.blog].item.find("input[name='name']").val(_blog.name);
+    my_template.blog_list_ref[_blog.blog].item.find("input[name='username']").val(_blog.username);
+    // my_template.blog_list_ref[_blog.blog].item.find("input[name='keywords']").val(_blog.keywords);
 }
 
 function blog_add_callback(d)
@@ -60,8 +57,8 @@ function blog_add_callback(d)
 
         var _b = d.find('blog').text();
 
-        mytpl.blog_list_ref[_b].form.find('div.donotchangepwd').hide();
-        mytpl.blog_list_ref[_b].form.find('input[name="password"]').show();
+        my_template.blog_list_ref[_b].item.find('div.donotchangepwd').hide();
+        my_template.blog_list_ref[_b].item.find('input[name="password"]').show();
     }
     if(_status=="<?php echo C_Blog::ADD_STATUS_OVERQUOTA ?>")
     {
@@ -81,7 +78,7 @@ function blog_add_callback(d)
     }
     if(_status=="<?php echo C_Blog::ADD_STATUS_TYPE_FAILED ?>")
     {
-        mytpl.blog_type_failed.show();
+        my_template.blog_type_failed.show();
     }
     if(_status=="<?php echo C_Blog::ADD_STATUS_MAINTENANCE ?>")
     {
@@ -92,11 +89,11 @@ function blog_add_callback(d)
 function blog_add()
 {
     add_message(''); 
-    mytpl.blog_type_failed.hide();
+    my_template.blog_type_failed.hide();
 
     var _u = null;
 
-    if((_u = mytpl.new_blog_url.val())=="")
+    if((_u = my_template.new_blog_url.val())=="")
     {
         add_message("<?php echo $this->translation()->form_incomplete ?>");
         return null;
@@ -120,40 +117,39 @@ function blog_list()
 
 function blog_edit_show(b)
 {
-    mytpl.blog_list_ref[b].item.find('a.blogeditlnk').hide();
-    mytpl.blog_list_ref[b].item.find('a.blogdeletelnk').show();
-    mytpl.blog_list_ref[b].form.show();
+    my_template.blog_list_ref[b].item.find('button.blogeditbtn').hide();
+    my_template.blog_list_ref[b].item.find('button.blogdeletebtn').show();
+    my_template.blog_list_ref[b].item.find('div.blogbot').show();
 }
 
 function blog_edit_hide(b)
 {
-    mytpl.blog_list_ref[b].form.find('div.donotchangepwd').show();
-    mytpl.blog_list_ref[b].form.find('input[name="password"]').hide();
-    mytpl.blog_list_ref[b].form.hide();
-    mytpl.blog_list_ref[b].item.find('a.blogdeletelnk').hide();
-    mytpl.blog_list_ref[b].item.find('a.blogeditlnk').show();
+    my_template.blog_list_ref[b].item.find('div.donotchangepwd').show();
+    my_template.blog_list_ref[b].item.find('input[name="password"]').hide();
+    my_template.blog_list_ref[b].item.find('div.blogbot').hide();
+    my_template.blog_list_ref[b].item.find('button.blogdeletebtn').hide();
+    my_template.blog_list_ref[b].item.find('button.blogeditbtn').show();
 }
 
 function blog_remove_from_list(b)
 {
-    mytpl.blog_list_ref[b].item.next('div.blogdeletemsg').remove();
-    mytpl.blog_list_ref[b].item.remove();
-    mytpl.blog_list_ref[b].form.remove();
-    mytpl.blog_list_ref[b] = null;
+    //my_template.blog_list_ref[b].item.next('div.blogdeletemsg').remove();
+    my_template.blog_list_ref[b].item.remove();
+    my_template.blog_list_ref[b] = null;
     flash_message("<?php echo $this->translation()->deleted ?>");
 }
 
 function blog_delete_confirm_show(b)
 {
     blog_edit_hide(b);
-    mytpl.blog_list_ref[b].item.find('a.blogeditlnk').hide();
-    mytpl.blog_list_ref[b].item.after(mytpl.blog_delete_blank.clone().html());
+    my_template.blog_list_ref[b].item.find('button.blogeditbtn').hide();
+    my_template.blog_list_ref[b].item.after(my_template.blog_delete_blank.clone().html());
 }
 
 function blog_delete_confirm_hide(b)
 {
-    mytpl.blog_list_ref[b].item.next('div.blogdeletemsg').remove();
-    mytpl.blog_list_ref[b].item.find('a.blogeditlnk').show();
+    my_template.blog_list_ref[b].item.next('div.blogdeletemsg').remove();
+    my_template.blog_list_ref[b].item.find('button.blogeditbtn').show();
 }
 
 function blog_delete_callback(d)
@@ -174,7 +170,7 @@ function blog_update_callback(d)
     {
         var _blog = _updated.find('blog').text();
         var _name = _updated.find('name').text();
-        mytpl.blog_list_ref[_blog].item.find('span.blogitemname').text(_name);
+        my_template.blog_list_ref[_blog].item.find('span.blogitemname').text(_name);
         flash_message("<?php echo $this->translation()->saved ?>");
         blog_edit_hide(_blog);
     }
@@ -185,10 +181,10 @@ function blog_update(b)
     var _up = 
     {
         blog          : b,
-        name          : mytpl.blog_list_ref[b].form.find("input[name='name']").val(),
-        blog_username : mytpl.blog_list_ref[b].form.find("input[name='username']").val(),
-        blog_password : mytpl.blog_list_ref[b].form.find("input[name='password']").val(),
-        keywords      : mytpl.blog_list_ref[b].form.find("input[name='keywords']").val()
+        name          : my_template.blog_list_ref[b].item.find("input[name='name']").val(),
+        blog_username : my_template.blog_list_ref[b].item.find("input[name='username']").val(),
+        blog_password : my_template.blog_list_ref[b].item.find("input[name='password']").val()
+        // keywords      : my_template.blog_list_ref[b].item.find("input[name='keywords']").val()
     }
 
     do_request('POST', './blog/update', _up, blog_update_callback);
@@ -196,7 +192,7 @@ function blog_update(b)
 
 $(document).ready(function()
 {
-    mytpl =
+    my_template =
     {
         new_blog_button   : $("#addnewblogbtn"),
         new_blog_form     : $("#addnewblogform"),
@@ -210,14 +206,14 @@ $(document).ready(function()
         blog_list_ref     : Array()
     }; 
     
-    mytpl.new_blog_button.click(function()
+    my_template.new_blog_button.click(function()
     {
         if(active_request==false) { toggle_blog_add(); }
         $(this).blur();
         return false;
     });
 
-    mytpl.new_blog_url.keypress(function(e)
+    my_template.new_blog_url.keypress(function(e)
     {
         if((e.which && e.which == 13) || (e.keyCode && e.keyCode == 13))
         {
@@ -225,7 +221,7 @@ $(document).ready(function()
         }
     });
 
-    mytpl.new_blog_submit.click(function()
+    my_template.new_blog_submit.click(function()
     {
         if(active_request==false) { blog_add(); }
     });
@@ -235,39 +231,39 @@ $(document).ready(function()
         return i.parent().parent().attr('blog')
     }
 
-    mytpl.blog_list_area.find('a.blogeditlnk').live('click', function()
+    my_template.blog_list_area.find('button.blogeditbtn').live('click', function()
     {
         blog_edit_show(blog_item_getid($(this)));
         return false;
     });
 
-    mytpl.blog_list_area.find('a.blogdeletelnk').live('click', function()
+    my_template.blog_list_area.find('button.blogdeletebtn').live('click', function()
     {
         blog_delete_confirm_show(blog_item_getid($(this)));
         return false;
     });
 
-    mytpl.blog_list_area.find("div.donotchangepwd")
+    my_template.blog_list_area.find("div.donotchangepwd")
         .find('input')
         .live('change', function()
     {
         $(this).attr('checked', true);
         $(this).parent().toggle();
-        mytpl.blog_list_area.find("input[name='password']").toggle().focus();
+        my_template.blog_list_area.find("input[name='password']").toggle().focus();
     });
 
     function blog_update_getid(i)
     {
-        return i.parent().parent().parent().attr('blog')
+        return i.parent().parent().parent().parent().attr('blog')
     }
 
-    mytpl.blog_list_area.find("input[name='blogupdatebtn']").live('click', function()
+    my_template.blog_list_area.find("button.blogupdatebtn").live('click', function()
     {
         blog_update(blog_update_getid($(this)));
         return false;
     });
 
-    mytpl.blog_list_area.find("input[name='blogcancelbtn']").live('click', function()
+    my_template.blog_list_area.find("button.blogcancelbtn").live('click', function()
     {
         blog_edit_hide(blog_update_getid($(this)));
         return false;
@@ -278,13 +274,13 @@ $(document).ready(function()
         return i.parent().parent().parent().prev('div.blogitem').attr('blog');
     }
 
-    mytpl.blog_list_area.find("input[name='blogdeletebtn']").live('click', function()
+    my_template.blog_list_area.find("input[name='blogdeletebtn']").live('click', function()
     {
         blog_delete(blog_delete_getid($(this)));
         return false;
     });
 
-    mytpl.blog_list_area.find("input[name='blognodelbtn']").live('click', function()
+    my_template.blog_list_area.find("input[name='blognodelbtn']").live('click', function()
     {
         blog_delete_confirm_hide(blog_delete_getid($(this)));
         return false;
