@@ -96,3 +96,11 @@ HORAS TRABALHADAS: 6h
 - implementação layout backend (reader)
 
 HORAS TRABALHADAS: 6h
+
+==========
+28/08/2009
+==========
+
+- implementação layout backend
+
+HORAS TRABALHADAS: 4h
